faculty and hr changes for handling single entity response